# assimp-test

./: .gitignore  CMakeLists.txt  main.cpp
include/: Common.hpp  Mesh.hpp  Model.hpp
source/: Model.cpp
